--- a/index.adoc
+++ b/index.adoc
@@ -16,42 +16,27 @@ mascher@ipk-gatersleben.de
 <link rel="stylesheet"  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css">
 ++++
 
-== Software installation
+//== Software installation
 
-IMPORTANT: The Virtual Machine has already been set up with all necessary software installed for the course at CIHEAM Zaragoza in November 2025. 
+//IMPORTANT: The Virtual Machine has already been set up with all necessary software installed for the course at CIHEAM Zaragoza in November 2025. 
 
-. All the commands were tested on an Ubuntu virtual machine (VM) with standard software configuration (Ubuntu 20.04.1 LTS). The VM has 8 GB of main memory and runs on an Intel(R) Xeon(R) Gold 5218 CPU (2.30GHz, 2 physical cores), and has access to 500 GB of hard disk space. Fewer than 8 GB of RAM would prevent one programs we will use (minimap2) to run properly, but most steps should work with 4 GB or even 2 GB RAM. A total of 70 GB of disk space are needed to store the RNA-seq dataset we will analyze.
+//. All the commands were tested on an Ubuntu virtual machine (VM) with standard software configuration (Ubuntu 20.04.1 LTS). The VM has 8 GB of main memory and runs on an Intel(R) Xeon(R) Gold 5218 CPU (2.30GHz, 2 physical cores), and has access to 500 GB of hard disk space. Fewer than 8 GB of RAM would prevent one programs we will use (minimap2) to run properly, but most steps should work with 4 GB or even 2 GB RAM. A total of 70 GB of disk space are needed to store the RNA-seq dataset we will analyze.
 
-. Information on how to setup an Ubuntu VM were given in the 
-https://github.com/eead-csic-compbio/scripting_linux_shell[course] of Bruno Contreras and Carlos Cantalapiedra. See their https://github.com/eead-csic-compbio/scripting_linux_shell/blob/master/session0.md[session 0].
+//. Information on how to setup an Ubuntu VM were given in the 
+//https://github.com/eead-csic-compbio/scripting_linux_shell[course] of Bruno Contreras and Carlos Cantalapiedra. See their https://github.com/eead-csic-compbio/scripting_linux_shell/blob/master/session0.md[session 0].
 
-. Install the required tools with the http://manpages.ubuntu.com/manpages/bionic/man8/apt.8.html[apt] package manager.
-You will be prompted to enter your user password.
-+
-[source,sh]
-----
-sudo apt install samtools cufflinks kallisto minimap2 python git r-base ncbi-blast+ libssl-dev curl libcurl4-openssl-dev pandoc emboss mafft snp-sites gmap
-----
+//. Install the required tools with the http://manpages.ubuntu.com/manpages/bionic/man8/apt.8.html[apt] package manager.
+//You will be prompted to enter your user password.
+//+
+//[source,sh]
+//----
+//sudo apt install samtools cufflinks kallisto minimap2 python git r-base ncbi-blast+ libssl-dev curl libcurl4-openssl-dev pandoc emboss mafft snp-sites gmap
+//----
+//
+//.. http://samtools.github.io[samtools], https://github.com/lh3/minimap2[minimap2], https://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Web&PAGE_TYPE=BlastDocs&DOC_TYPE=Download[ncbi-blast+], http://emboss.sourceforge.net[emboss], https://mafft.cbrc.jp/alignment/software/[mafft], http://sanger-pathogens.github.io/snp-sites/[snp-sites], http://research-pub.gene.com/gmap/[gmap] and http://cole-trapnell-lab.github.io/cufflinks/[cufflinks] will be used in the analysis of two rice genomes.
+//
+//.. https://pachterlab.github.io/kallisto/[kallisto] will be used to analyse RNAseq data of wheat.
 
-.. http://samtools.github.io[samtools], https://github.com/lh3/minimap2[minimap2], https://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Web&PAGE_TYPE=BlastDocs&DOC_TYPE=Download[ncbi-blast+], http://emboss.sourceforge.net[emboss], https://mafft.cbrc.jp/alignment/software/[mafft], http://sanger-pathogens.github.io/snp-sites/[snp-sites], http://research-pub.gene.com/gmap/[gmap] and http://cole-trapnell-lab.github.io/cufflinks/[cufflinks] will be used in the analysis of two rice genomes.
-
-.. https://pachterlab.github.io/kallisto/[kallisto] will be used to analyse RNAseq data of wheat.
-
-.. https://en.wikipedia.org/wiki/Python_(programming_language)[python], https://en.wikipedia.org/wiki/Git[git], https://packages.ubuntu.com/xenial/libcurl4-openssl-dev[libcurl4-openssl-dev], https://curl.se[curl], https://packages.debian.org/jessie/libssl-dev[libssl-dev], and https://pandoc.org[pandoc] are dependencies of dotPlotly, a program to show alignments of two genome assemblies.
-
-.. r-base is the Ubuntu package of the https://www.r-project.org[R statistical environment].
-
-. Now install the required R packages. These are also dependencies of https://github.com/tpoorten/dotPlotly[dotPlotly].
-
-. Start R by running `R` on the command line. You will be prompted to enter your password.
-+
-[source,r]
-----
-sudo R
-install.packages('optparse')
-install.packages('ggplot2')
-install.packages('plotly')
-----
 
 == Comparing two rice genome assemblies
 
@@ -315,7 +300,7 @@ find | grep abundance.tsv | xargs wc -l
 grep -c '^>' iwgsc_refseqv1.0_HighConf_CDS_2017Mar13.fa
 ----
 
-. Download the kallisto results. Delete the current output directories. Unzip the archive.
+. If there are issues, download the pre-computed kallisto results. Delete the current output directories. Unzip the archive.
 +
 [source,sh]
 ----
