--- a/index.adoc
+++ b/index.adoc
@@ -46,7 +46,7 @@ mascher@ipk-gatersleben.de
 +
 [source,sh]
 ----
-cd /media/Scripting
+cd /home/iamz/materials_Mascher
 ----
 
 . Have a look at the IR64 assembly. It is described in this https://www.g3journal.org/content/10/5/1495[paper]. Have a look at the file.
@@ -71,16 +71,16 @@ less Nipponbare.fasta
 +
 [source,sh]
 ----
-mkdir -p ~/international_masters/rice_assemblies
-cd ~/international_masters/rice_assemblies
+mkdir -p ~/rice_assemblies
+cd ~/rice_assemblies
 ----
 
 . Create symbolic links to the FASTA files of the assemblies in the downloads folder.
 +
 [source,sh]
 ----
-ln -s /media/Scripting/IR64.fasta
-ln -s /media/Scripting/Nipponbare.fasta
+ln -s /home/iamz/materials_Mascher/IR64.fasta
+ln -s /home/iamz/materials_Mascher/Nipponbare.fasta
 ----
 
 . Create index files that record the chromosome lengths in each assembly.
@@ -121,12 +121,12 @@ less -S Nipponbare_IR64.paf
 column -t Nipponbare_IR64.paf | less -S
 ----
 
-. Copy the PAF file to the Windows desktop and open them.
-+
-[source,sh]
-----
-cp Nipponbare_IR64.paf /media/Desktop/
-----
+//. Copy the PAF file to the Windows desktop and open them.
+//+
+//[source,sh]
+//----
+//cp Nipponbare_IR64.paf /media/Desktop/
+//----
 
 . Load the PAF file into the https://tom-poorten.shinyapps.io/dotplotly_shiny/[Dotplotly] app. 
 
@@ -136,7 +136,7 @@ cp Nipponbare_IR64.paf /media/Desktop/
 +
 [source,sh]
 ----
-ln -s /media/Scripting/pla1.fasta 
+ln -s /home/iamz/materials_Mascher/pla1.fasta 
 less pla1.fasta
 ----
 
@@ -230,16 +230,16 @@ snp-sites -v pla1_gmap_mafft.fasta
 +
 [source,sh]
 ----
-mkdir ~/international_masters/wheat_rnaseq
-cd ~/international_masters/wheat_rnaseq
+mkdir ~/wheat_rnaseq
+cd ~/wheat_rnaseq
 ----
 
 . Create symbolic links to the annotation files and decompress them.
 +
 [source,sh]
 ----
-ln -s /media/Scripting/iwgsc_refseqv1.0_HighConf_CDS_2017Mar13.fa.zip 
-ln -s /media/Scripting/iwgsc_refseqv1.0_FunctionalAnnotation_v1.zip 
+ln -s /home/iamz/materials_Mascher/iwgsc_refseqv1.0_HighConf_CDS_2017Mar13.fa.zip 
+ln -s /home/iamz/materials_Mascher/Scripting/iwgsc_refseqv1.0_FunctionalAnnotation_v1.zip 
 ----
 
 . Decompress the zip archives.
@@ -270,8 +270,8 @@ kallisto index --index wheat_index iwgsc_refseqv1.0_HighConf_CDS_2017Mar13.fa > 
 +
 [source,sh]
 ----
-ln -s /media/Scripting/GA*gz .
-ln -s /media/Scripting/WA*gz .
+ln -s /home/iamz/materials_Mascher/GA*gz .
+ln -s /home/iamz/materials_Mascher/WA*gz .
 ----
 
 . Run the quantification for a single sample.
@@ -336,13 +336,13 @@ zip -r kallisto.zip *_kallisto #<1>
 ----
 <1> `-r` instruct `zip` to travel the directory structure recursively, that is, to include all files in the folders.
 
-. Create a new folders on your Windows desktop and copy the files there.
-+
-[source,sh]
-----
-mkdir /media/Desktop/3drna
-cp -t /media/Desktop/3drna sample_info.csv transcript_genes.csv kallisto.zip
-----
+//. Create a new folders on your Windows desktop and copy the files there.
+//+
+//[source,sh]
+//----
+//mkdir /media/Desktop/3drna
+//cp -t /media/Desktop/3drna sample_info.csv transcript_genes.csv kallisto.zip
+//----
 
 . Open the https://3drnaseq.hutton.ac.uk/app_direct/3DRNAseq/[3D RNA-seq app].
 
